tests/paczka1/small_fuzzy/48742355.err
Error in line 9: JMcX A898 15,1
Error in line 10: NKnPt A898 77,6
Error in line 8: q0gvMPDkSP S292 40,1
